# Labs_ZPAD

./: .gitignore  README.md  requirements.txt
lab-2/: Lab_2.ipynb  lab2_part2.ipynb
lab-3/: lab3.ipynb
lab-4/: README.md  lab4.ipynb
lab-5/: .gitignore  README.md  app.py  lab5.ipynb
lab-6/: .gitignore  README.md  build.sh  preinstall.sh  run.sh
lab-6/include/: CameraProvider.hpp  Display.hpp  KeyProcessor.hpp
lab-6/src/: CameraProvider.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
lab-7/: .gitignore  CMakeLists.txt  preinstall.sh  run.sh
lab-7/include/: FaceDetector.hpp  FrameProcessor.hppy  KeyProcessor.hpp
lab-7/src/: Display.cpp  FaceDetector.cpp  KeyProcessor.cpp  main.cpp
lab5/: .gitignore  README.md  downloader.py
lab_02/: Lab_2.ipynb  README.md  lab2_part2.ipynb  requirements.txt
